# VIGOR

./: .detignore  .gitignore  Makefile  README.md  eval.sh  extract_pdf.py  merge.py  merge.sh  nohup.out  proxy.sh  pyproject.toml  requirements.txt  run_grpo.sh  run_intuitor.sh  run_intuitor_code.sh  setup.py  submit.sh  tasks_registry.json  test.py  upload_model.py  upload_model.sh  watch_merge.sh
det_yaml/: det-eval_4_24g.yaml  det-eval_single_24g.yaml  det-eval_single_48g.yaml  det-exp_1.5B_4gpu.yaml  det-exp_1.5B_8gpu.yaml  det-exp_3B_48_lora_code.yaml  det-exp_3B_48g.yaml  det-exp_3B_48g_lora.yaml  det-test_24g.yaml  det_rl_1_5B_24g.yaml  det_rl_3B_24g.yaml  det_rl_3B_2stage.yaml  det_rl_3B_48g.yaml  det_rl_3B_48g_code.yaml  det_rl_3B_48g_instruct.yaml  det_rl_3B_48g_lora.yaml  det_rl_7B_48g_lora.yaml  det_rl_7B_48g_lora_open_data.yaml  det_rl_7B_80g.yaml  det_rl_7B_96g.yaml  det_sft_3B.yaml  det_sft_7B.yaml
det_yaml_h800/: det_eval_h800.yaml
eval_scrips/: eval.sh  eval_gsm8k.sh  eval_h800.sh  eval_local.sh
scripts/: benchmark_e2b.py  bootstrap_h800_venv.sh  code_process.py  decontaminate.py  e2b_router.py  generate_reasoning.py  get_tensor_parallel_size.py  gpu_monitor.sh  make_dolly_csv.py  mihomo_service.sh  mihomo_watchdog.sh  morph_router.py  run_benchmarks.py  setup_venv.sh  upload_details.py  watch_new_checkpoints.sh  watch_new_checkpoints_deduper.sh
slurm/: README.md  compute_pass_rate.slurm  e2b_router.slurm  evaluate.slurm  generate.slurm  morph_router.slurm  run_14b_grpo.slurm  run_14b_intuitor.slurm  run_7b_grpo.slurm  run_7b_intuitor.slurm  (+3 more)
(+87 files in other folders)
